# process-data-flow

./: Dockerfile  Makefile  README.md  compose.yaml  database.db  pyproject.toml
.github/workflows/: lint.yaml  tests.yaml
assets/: processing_flow.drawio
process_data_flow/: __init__.py  __main__.py  rabbitmq_config.py  scheduler.py  schemas.py  settings.py  utils.py
process_data_flow/apis/: database.py  dependencies.py
process_data_flow/apis/extractor/: app.py  models.py
process_data_flow/apis/extractor/routers/: extract_data.py  monitor.py  product.py
process_data_flow/apis/magalu/: app.py
process_data_flow/apis/magalu/routers/: monitor.py  (+2 more)
process_data_flow/apis/market/: app.py  models.py
process_data_flow/callback_api/: app.py  main.py  schemas.py  utils.py
process_data_flow/clients/: base.py  extractor.py  magalu.py  market.py
process_data_flow/commons/: api.py  decorators.py  rabbitmq_client.py  requests.py  tenacity.py
process_data_flow/commons/clients/: magalu.py  market.py
process_data_flow/commons/rabbitmq/: client.py  consumer.py
process_data_flow/consumers/: exceptions.py  market_query.py  product.py  register_product.py
process_data_flow/crawlers/: base.py  magalu.py  register_form.py  register_product.py
process_data_flow/market_api/: app.py  database.py  models.py
process_data_flow/repositories/: product.py
process_data_flow/schedulers/: product.py
process_data_flow/scrapers/: base.py  magalu.py
process_data_flow/services/: extract_data.py  product.py  rabbitmq.py
resources/: flow.bpmn
tests/commons/: test_logger.py
(+2 files in other folders)
